--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     text-align: center;
     color: bisque;
     box-sizing: border-box;
-}
+    }
 
 section {
     color: rgb(0, 0, 44);
@@ -13,7 +13,7 @@ section {
     border-radius: 1em;
     margin: auto;
     box-shadow: 10px 5px 10px rgb(0, 0, 44);
-}
+    }
 
 #labelNumero {
     display: block;
@@ -21,7 +21,9 @@ section {
     }
 
 textarea {
-    width:200px;
     margin: 1em;
+    min-width: 200px;
+    max-width: 200px;   
+    }
 
-}
+    
